[project]
name = "ComfyUI_MaskAreaCondition"
description = "Calculates the percentage of a mask area compared to the total image size and outputs a boolean based on a defined threshold."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_MaskAreaCondition"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "ComfyUI_MaskAreaCondition"
Icon = ""
